--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/go,haskell,elixir,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,haskell,elixir,python
 ### Data Folders ###
-*/data/*
+*/data/
 
 
 ### Elixir ###
